--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "clean": "rm -rf dist && rm -f .eslintcache",
     "analyze": "export ANALYZE_MODE=static && yarn build",
     "build": "export BABEL_ENV=build && webpack --config webpack.prod.js",
-    "develop": "webpack serve --hot --server-type https --port 8080 --config webpack.develop.js"
+    "develop": "NODE_ENV=development webpack serve --hot --server-type https --port 8080 --config webpack.develop.js"
   },
   "author": "Looker",
   "license": "MIT",
   "engines": {
-    "node": ">=14"
+    "node": ">=16"
   },
   "dependencies": {
     "@looker/extension-sdk": "^22.20.1",
@@ -33,6 +33,7 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "url-loader": "^4.1.1",
+    "vue-hot-reload-api": "^2.3.4",
     "vue-loader": "^17.0.1",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
